--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,28 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# my basics
+*~
+build/
+*.DS_Store
+.git/
+.vscode/
+*.key
+*.log
+*.retry
+**/*.retry
+*.swp
+**/*.swp
+**/test.yml
+tmphost
+tower-cli/
+.vagrant/
+**/*.vault_pass
+vault-pass.txt
+vpass.yml
+venv
+*.pyc
+*cache*
+
+benchmark-operator/
